# idp2023

./: .gitignore  README.md  pyproject.toml
.reuse/: dep5
idp2023_example/: signal_analyzer.py  signal_app_main_window.py  signal_app_widget.py  signal_converter.py  signal_window_chart_widget.py  worker.py  worker_signals.py
